--- a/lib.fast/src/main/AndroidManifest.xml
+++ b/lib.fast/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application android:allowBackup="true" android:label="@string/app_name">
-       <activity android:name=".imageselector.MultiImageSelectorActivity"
-           android:screenOrientation="portrait"
-           android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+        <activity android:name=".qrcode.CaptureActivity" android:screenOrientation="portrait"/>
+
     </application>
     <!-- 访问网络状态-->
     <uses-permission android:name="android.permission.INTERNET" />
