--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':lib.fast')
-    implementation project(':lib.qrcode')
+    compile project(':lib.fast')
+    compile project(':lib.qrcode')
+    compile 'pub.devrel:easypermissions:1.0.1'
+    compile 'cn.bingoogolapple:bga-photopicker:1.2.8@aar'
+    compile 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
 }
