--- a/lib.umshare/build.gradle
+++ b/lib.umshare/build.gradle
@@ -25,10 +25,24 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //facebook
+    compile files('libs/android-support-v4.jar')
+    compile files('libs/SocialSDK_facebook.jar')
+    //QQ精简版,只包含分享和登陆(授权)
+    compile files('libs/SocialSDK_QQ_Simplify.jar')
+    //wechat精简版，只支持分享和微信登陆(授权)不包含微信支付
+    compile files('libs/SocialSDK_WeChat_Simplify.jar')
+    //whatsapp
+    compile files('libs/SocialSDK_whatsapp.jar')
+    //友盟核心包
+    compile files('libs/umeng_social_api.jar')
+    compile files('libs/umeng_social_net.jar')
+    compile files('libs/umeng_social_tool.jar')
+    implementation files('libs/umeng_social_shareboard.jar')
+    implementation files('libs/umeng_social_tool.jar')
 }
