--- a/lib.umshare/src/main/AndroidManifest.xml
+++ b/lib.umshare/src/main/AndroidManifest.xml
@@ -1,2 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.demo.fastproject.libumshare"/>
+          package="com.demo.fastproject.libumshare">
+
+    <meta-data android:value="YOUR_APP_KEY" android:name="UMENG_APPKEY"/>
+    <meta-data android:value="Channel ID" android:name="UMENG_CHANNEL"/>
+
+    <!-- 必须的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+</manifest>
