项目快速开发（测试）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'pub.devrel:easypermissions:1.0.1'
     compile 'cn.bingoogolapple:bga-photopicker:1.2.8@aar'
     compile 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
+    implementation project(':lib.widget')
 }
