--- a/lib.fast/build.gradle
+++ b/lib.fast/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     /**retrofit2*/
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    compile "io.reactivex.rxjava2:rxjava:2.1.10"
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
     compile files('libs/json_simple-1.1.jar')
     compile 'com.android.support:multidex:1.0.0'
     /**litepal数据库*/
