--- a/lib.fast/src/main/AndroidManifest.xml
+++ b/lib.fast/src/main/AndroidManifest.xml
@@ -2,8 +2,15 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application android:allowBackup="true" android:label="@string/app_name">
-        <activity android:name=".qrcode.CaptureActivity" android:screenOrientation="portrait"/>
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.android7.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
     <!-- 访问网络状态-->
     <uses-permission android:name="android.permission.INTERNET" />
