--- a/lib.fast/build.gradle
+++ b/lib.fast/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
     compile files('libs/json_simple-1.1.jar')
     compile 'com.android.support:multidex:1.0.0'
-    //数据库加密三方库
+
+    //数据库加密三方库 参考：https://blog.csdn.net/m0_37168878/article/details/63683459
     compile 'net.zetetic:android-database-sqlcipher:3.5.9'
     //网络请求库
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
